# SM_Thesis_Code

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
data/source/: flat_plate_literature_compiled.xlsx  sphere_literature_compiled.xlsx
data/thesis_processed/: flat_plate_thesis_processed.csv  sphere_thesis_processed.csv
outputs/: flat_plate_results.json  sphere_results.json
scripts/: analyze_flat_plate.py  analyze_sphere.py  prepare_data.py
src/sm_thesis_code/: __init__.py  data.py  plotting.py  preprocessing.py  regression.py  segmentation.py
tests/: test_data_integrity.py  test_documentation.py  test_preprocessing.py  test_thesis_results.py
